# qmckl_gpu

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
devtools/: README.md  clang_format_all.sh  copy_qmckl_headers.sh  fprettify_all.sh
doc/: TROUBLESHOOTING.md  USAGE.md
include/: qmckl_ao.h  qmckl_ao_gpu.h  qmckl_ao_private_func.h  qmckl_ao_private_type.h  qmckl_basic_functions.h  qmckl_basic_type.h  qmckl_blas.h  qmckl_blas_device.h  qmckl_blas_private_func.h  qmckl_blas_private_type.h  qmckl_context.h  qmckl_context_device.h  qmckl_context_private_type.h  qmckl_determinant_private_func.h  qmckl_determinant_private_type.h  qmckl_device_types.h  qmckl_distance.h  qmckl_electron.h  qmckl_electron_private_func.h  qmckl_electron_private_type.h  qmckl_error_private_type.h  qmckl_gpu.h  qmckl_gpu_blas.hpp  qmckl_gpu_datatypes.h  qmckl_gpu_f.F90  qmckl_gpu_f.f90  qmckl_gpu_types.h  qmckl_jastrow.h  qmckl_jastrow_gpu.h  qmckl_jastrow_private_func.h  qmckl_jastrow_private_type.h  qmckl_local_energy_private_func.h  qmckl_local_energy_private_type.h  qmckl_memory.h  qmckl_memory_device.h  qmckl_memory_private_func.h  qmckl_memory_private_type.h  qmckl_mo.h  qmckl_mo_private_func.h  qmckl_mo_private_type.h  (+13 more)
src/: qmckl_ao.c  qmckl_ao_acc.c  qmckl_ao_acc_offload.c  qmckl_ao_device.c  qmckl_ao_gpu.c  qmckl_ao_omp.c  qmckl_ao_omp_device.c  qmckl_ao_omp_offload.c  qmckl_ao_openacc.c  qmckl_ao_openmp.c  qmckl_basic_functions.c  qmckl_blas.c  qmckl_blas_acc.c  qmckl_blas_device.c  qmckl_blas_omp.c  qmckl_blas_omp_device.c  qmckl_context.c  qmckl_context_acc_device.c  qmckl_context_device.c  qmckl_context_omp_device.c  qmckl_distance_acc.c  qmckl_distance_omp.c  qmckl_electron.c  qmckl_electron_acc.c  qmckl_gpu_blas.cpp  qmckl_gpu_f.c  qmckl_jastrow.c  qmckl_jastrow_acc.c  qmckl_jastrow_acc_offload.c  qmckl_jastrow_omp.c  qmckl_jastrow_omp_offload.c  qmckl_jastrow_openacc.c  qmckl_jastrow_openmp.c  qmckl_memory.c  qmckl_memory_acc.c  qmckl_memory_device.c  qmckl_memory_omp.c  qmckl_memory_omp_device.c  qmckl_mo.c  qmckl_mo_acc.c  (+14 more)
tests/: Makefile.am  ao_reference.txt  chbrclf_fortran_interface.c  mo_reference.txt  n2.h  n2_fortran_interface.c  qmckl_f.F90  test_qmckl_ao.c  test_qmckl_ao_acc.c  test_qmckl_ao_f.F90  test_qmckl_ao_omp.c  test_qmckl_fortran_interface.f90  test_qmckl_jastrow_acc.c  test_qmckl_jastrow_omp.c  test_qmckl_mo.c  test_qmckl_mo_acc.c  test_qmckl_mo_omp.c
